Fixes Block overflowing off screen on <600px full width Section
This was due to negative margins being applied too early. Turns out these were mirroring a rule already in place within the editor and didn’t need to be there anyway. Removing fixes the issue as the core rules are applied at the correct media query.

--- a/packages/block-library/src/section/editor.scss
+++ b/packages/block-library/src/section/editor.scss
@@ -36,9 +36,6 @@
  */
 .wp-block[data-type="core/section"][data-align="full"] {
 
-	margin-left: -#{$block-container-side-padding - $border-width};
-	margin-right: -#{$block-container-side-padding - $border-width};
-
 	// First tier of InnerBlocks must act like the container of the standard canvas
 	> .editor-block-list__block-edit > div > .wp-block-section > .editor-inner-blocks {
 		margin-left: auto;
